JumpScript/tests/baselines/reference/objectSpreadNegativeParse.errors.txt
tests/cases/conformance/types/spread/objectSpreadNegativeParse.jump(1,15): error TS2304: Cannot find name 'o'.
tests/cases/conformance/types/spread/objectSpreadNegativeParse.jump(1,18): error TS1109: Expression expected.
tests/cases/conformance/types/spread/objectSpreadNegativeParse.jump(2,12): error TS2698: Spread types may only be created from object types.
tests/cases/conformance/types/spread/objectSpreadNegativeParse.jump(2,15): error TS1109: Expression expected.
tests/cases/conformance/types/spread/objectSpreadNegativeParse.jump(2,16): error TS2304: Cannot find name 'o'.
tests/cases/conformance/types/spread/objectSpreadNegativeParse.jump(3,15): error TS2304: Cannot find name 'matchMedia'.
tests/cases/conformance/types/spread/objectSpreadNegativeParse.jump(3,28): error TS1005: ',' expected.
tests/cases/conformance/types/spread/objectSpreadNegativeParse.jump(3,31): error TS1128: Declaration or statement expected.
tests/cases/conformance/types/spread/objectSpreadNegativeParse.jump(4,16): error TS2304: Cannot find name 'get'.
tests/cases/conformance/types/spread/objectSpreadNegativeParse.jump(4,20): error TS1005: ',' expected.


==== tests/cases/conformance/types/spread/objectSpreadNegativeParse.jump (10 errors) ====
    let o7 = { ...o? };
                  ~
!!! error TS2304: Cannot find name 'o'.
                     ~
!!! error TS1109: Expression expected.
    let o8 = { ...*o };
               ~~~~~
!!! error TS2698: Spread types may only be created from object types.
                  ~
!!! error TS1109: Expression expected.
                   ~
!!! error TS2304: Cannot find name 'o'.
    let o9 = { ...matchMedia() { }};
                  ~~~~~~~~~~
!!! error TS2304: Cannot find name 'matchMedia'.
                               ~
!!! error TS1005: ',' expected.
                                  ~
!!! error TS1128: Declaration or statement expected.
    let o10 = { ...get x() { return 12; }};
                   ~~~
!!! error TS2304: Cannot find name 'get'.
                       ~
!!! error TS1005: ',' expected.
    